--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,47 +10,49 @@ on:
     branches: [main]
 
 jobs:
-  # Defines a job names build-test
-  build-test:
-    runs-on: ubuntu-latest # GitHub-hosted Linux runner
-
+  # Defines a job named lint
+  lint:
+    runs-on: ubuntu-latest
     steps:
-      - name: ⬇️ Checkout code
-        uses: actions/checkout@v4
-
-      # FRONTEND
-      - name: 🛠 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: 📦 Install frontend deps
+      - name: Install dependencies
         working-directory: frontend
         run: npm ci
-
-      - name: 📐 Lint frontend
+      - name: Run lint
         working-directory: frontend
         run: npm run lint
-
-      - name: 🏗 Build frontend
-        working-directory: frontend
-        run: npm run build
-
-      # BACKEND
-      - name: 🐍 Setup Python
-        uses: actions/setup-python@v5
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: 📦 Install backend deps
+      - name: Install backend deps
         working-directory: backend
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-
-      - name: 🧪 Run backend tests
+      - name: Run tests
         working-directory: backend
         run: |
           source venv/bin/activate
           pytest
+  build:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
+      - name: Build
+        working-directory: frontend
+        run: npm run build
